# Project-Klaus

./: .gitignore  index.ts  nodemon.json  package.json  tsconfig.json
backend/: .gitignore  Cargo.toml  docker-compose.local-deps.yml
backend/.sqlx/: query-005a5d451aaed0b4f7c324a9e6212c2aa9d98d430dd30589434736610fb801ce.json  query-0d6ed38ea8dd62a727483564f7ee26c526b8260e22b2bac669a317cebc189a86.json  query-14634e2c10021a08ca44e3d4ac3f335653fc0e05f3e153f6dd4f93728d783c1c.json  query-18b173a1173ba3d3f5d21817d9ded7dcea3d8b234eee860343739ca9f7f2b42a.json  query-1c264f1248955d8fd43b558d2abf3140c4078f83eb8255591372fb6d018e2891.json  query-1cd6c682a5ff2c582d07f9ca1dfb6de5d2ff14f105372bacb1673bf377676b27.json  query-29cec32bb19e4f7d9a3b8041cca01e319c80e339205f899b82df6a6645e97169.json  query-2a578bdda4f7acdc6de2d4f2c88223ede5b754ce4cad601cdde851c11168ed0b.json  query-2f30714638d0c3b240beb83c605488295935b4e9fc9b56abf60063e9a36520a1.json  query-31503a74052277cf15f582cc18eb47484255551caa471f1c4f8f4b951ed34760.json  query-32aa1d7c8e817a2ff750e6286b1efa589860c929ce5e9a1fcfd0845fda51d191.json  query-336baa257fcce2e3c17916934c04c529923a432f1da72925c16215b40d675f2b.json  query-3eea0b39ad2342ecbfdffe08cf7b76a06b74b1d644a5924942cdfb710ca3d475.json  query-403ed92a3af6240458bd997c2632f8451592471131ad03ea057d6f5a9d852922.json  query-4765e694e1f6ccef5502219707bacfb44041ec629affbebb04df843e879a1497.json  query-5afdf42c6f7f715c941af3c09016902b3341da671c8d2469d1803c6fcc5d5d89.json  query-5e36a68b2a76e64da237525e0452b195ae97e8f79e82c087438b8b9538ba1e48.json  query-6245f632c44a2134ab50807d1984167dde3a41dd6e0bafec6b5d9198b9fd2d35.json  query-668f46c15b2764e18c1005174cec472d9f38eef599ffbd3cfb6010704d1f3cf9.json  query-6a094f7ba79888dcee1447e231bb00525ee36242491fee72c135f40933610c2b.json  query-6bcfa086be715e2507094507a4801d5903dfac88d13c4b817d03d40d4496b9d0.json  query-706469895d7d28ee011714335d3f84b9302ce61832552420d42b4fc47b3fed6d.json  query-70e0ce54b327c224eb675e62d107490653a44061e387d169bb44ccacd7681a6c.json  query-74804ce87c4191cccbaa49608bb6458aa7ecf130f0b3fd5c0221708b2d729c86.json  query-75014e7829dd634b00cdc7c7e7354fecaa7cba0d91d3e006cc3d2d3b63ab1d53.json  query-7557f0d6350db9379d70c2cc54c02e588fa9dcf4007dc9f620043275ccabd5a4.json  query-7a1a0ed3ccd3bac7f7cef8e5fdeafc901df308db1e671a20b07782d79a7c4418.json  query-895e7d0b100b1a676f9d14f907cb6dc3a9991186d242c8f46ec66e821e7cb139.json  query-89a0dffaca2ffa36f7269e83e89ba544c5387a7be6c52e42d98f4331f5c84b97.json  (+32 more)
backend/src/: app.rs  db.rs  error.rs  main.rs  (+2 more)
(+73 files in other folders)
