[package]
name = "chimney"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
anyhow = "1.0.98"
tracing = { version = "0.1.41" }
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.13"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
sysinfo = "0.36.1"


