[package]
name = "chimney"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", 'uuid', 'ipnet', ] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
anyhow = "1.0.98"
tracing = { version = "0.1.41" }
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.13"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
sysinfo = "0.36.1"
chrono = "0.4.41"
rand = "0.8.5"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
rsa = { version = "0.9.8", features = ["sha2"] }
base64 = "0.22.1"
axum-extra = { version = "0.10.1", features = ["cookie"] }


[profile.dev.package.sqlx-macros]
opt-level = 3

[lints.clippy]
pedantic = "warn"
